--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -1,366 +1,7 @@
 // ==========================================================
-// Components
+// Positioning
 // ==========================================================
 
-// Settings
-@buttonDefaultShadow: 0 1px 0 rgba(0,0,0,0.07);
-@space:      round(@margin, 1);
-@space-xs:   round(@margin/3, 1);
-@space-s:    round(@margin/2, 1);
-@space-l:    round(@margin*2, 1);
-@space-xl:   round(@margin*3, 1);
-
-// Cells
-[class*="cells"] {
-    display:table;
-    width: 100%;
-    >.cell {
-        display: table-cell;
-        vertical-align: middle;
-    }
-    &[class*="move"] {
-        width: auto;
-    }
-}
-.cells-group {
-    display: table;
-    >[class*="cells"] {
-        display: table-row;
-    }
-}
-.cells-table {
-    display: table;
-    .cells-group {
-        display: table-row-group;
-    }
-    >[class*="cells"] {
-        display: table-row;
-    }
-}
-[class*="cells"][class*="-justified"] {
-    table-layout: fixed;
-}
-[class*="spacing"] {
-    &[class*="cells"]>.cell,
-    &[class*="cells"][class*="group"]>[class*="cells"]>.cell {
-        padding-left: @space/2;
-        padding-right: @space/2;
-        &:first-child {
-            padding-left: 0;
-        }
-        &:last-child {
-            padding-right: 0;
-        }
-    }
-}
-[class*="-spacing--xl"] {
-    &[class*="cells"]>.cell,
-    &[class*="cells"][class*="group"]>[class*="cells"]>.cell {
-        padding-left: @space-xl/2;
-        padding-right: @space-xl/2;
-    }
-}
-[class*="-spacing--l"] {
-    &[class*="cells"]>.cell,
-    &[class*="cells"][class*="group"]>[class*="cells"]>.cell {
-        padding-left: @space-l/2;
-        padding-right: @space-l/2;
-    }
-}
-[class*="-spacing--s"] {
-    &[class*="cells"]>.cell,
-    &[class*="cells"][class*="group"]>[class*="cells"]>.cell {
-        padding-left: @space-s/2;
-        padding-right: @space-s/2;
-    }
-}
-[class*="-spacing--xs"] {
-    &[class*="cells"]>.cell,
-    &[class*="cells"][class*="group"]>[class*="cells"]>.cell {
-        padding-left: @space-xs/2;
-        padding-right: @space-xs/2;
-    }
-}
-
-// Lister
-[class*="lister"] {
-    > * {
-        padding-bottom: @space;
-        + * {
-            border-top-style: solid;
-            border-top-width: 1px;
-            padding-top: @space;
-        }
-        &:last-child:not([class*="padding"]) {
-            padding-bottom: 0 !important;
-        }
-    }
-    &[class*="-spacing--none"] {
-        > * {
-            padding-bottom: 0;
-            + * {
-                padding-top: 0;
-            }
-        }
-    }
-    &[class*="-spacing--xs"] {
-        > * {
-            padding-bottom: @space-xs;
-            + * {
-                padding-top: @space-xs;
-            }
-        }
-    }
-    &[class*="-spacing--s"] {
-        > * {
-            padding-bottom: @space-s;
-            + * {
-                padding-top: @space-s;
-            }
-        }
-    }
-    &[class*="-spacing--l"] {
-        > * {
-            padding-bottom: @space-l;
-            + * {
-                padding-top: @space-l;
-            }
-        }
-    }
-    &[class*="-spacing--xl"] {
-        > * {
-            padding-bottom: @space-xl;
-            + * {
-                padding-top: @space-xl;
-            }
-        }
-    }
-}
-
-// Buttons
-.createButton() {
-    .border-radius(@cornerRadius);
-    border-style: solid;
-    border-width: 1px;
-    display: inline-block;
-    font-weight: bold;
-    line-height: @bodyBaseline;
-    text-align: center;
-    white-space: nowrap;
-    &:not([class*=padding]) {
-        padding: (0.5em * @baselineDestroyer) (1em * @baselineDestroyer);
-    }
-}
-a, button, input {
-    &[class*=button] {
-        .createButton;
-    }
-}
-.ui-button {
-    .createButton;
-}
-[class*=button] {
-    &:not([class*=padding]) {
-        &[class*="-spacing--s"] {
-            padding: (0.25em * @baselineDestroyer) (0.5em * @baselineDestroyer);
-        }
-        &[class*="-spacing--xs"] {
-            padding: (0.12em * @baselineDestroyer) (0.25em * @baselineDestroyer);
-        }
-        &[class*="-spacing--l"] {
-            padding: (0.75em * @baselineDestroyer) (1.5em * @baselineDestroyer);
-        }
-        &[class*="-spacing--xl"] {
-            padding: (1em * @baselineDestroyer) (2em * @baselineDestroyer);
-        }
-    }
-    &[class*="-blank"] {
-        background: none !important;
-        border-color: transparent !important;
-        box-shadow: none !important;
-    }
-    .buttonset>& {
-        .border-radius(0);
-        &:first-child {
-            .border-left-radius(@cornerRadius);
-        }
-        &:last-child {
-            .border-right-radius(@cornerRadius);
-        }
-        + * {
-            border-left: none;
-        }
-    }
-}
-ul[class*="menu"] {
-    &:not(.cells) {
-        display: inline-block;
-    }
-    list-style-type: none;
-    margin-bottom: 0;
-    margin-right: 0;
-    margin-top: 0;
-    padding: 0;
-    white-space: nowrap;
-    >li {
-        .clear-fix;
-        display: inline-block;
-        position: relative;
-        >a[class*="button"] {
-            .box-sizing(content-box);
-            min-width: 1em;
-        }
-            .label {
-                &[class*="icon"]:before {
-                    margin: 0;
-                }
-            }
-        >a {
-            display: inline-block;
-            white-space: nowrap;
-        }
-        >*[class*="menu"]:not([class*="-separated"]) {
-            .clear-ul;
-            display: none;
-            z-index: 99;
-            &[class*="menu"][class*="-right"] {
-                left: auto !important;
-                right: 0;
-            }
-        }
-        &:hover {
-            *[class*="menu"] {
-                display: block;
-            }
-            &[class*="swatch"] {
-                >a[class*="swatch"] {
-                    background: none;
-                    color: inherit !important;
-                }
-            }
-        }
-    }
-    &[class*="-horizontal"] {
-        >li {
-            >a {
-                *[class*="icon"]:before {
-                    margin: 0;
-                }
-            }
-            >*[class*="menu"]:not([class*="-separated"]) {
-                .position(@t:100%, @l:0);
-                min-width: 100%;
-                &[class*="-right"] {
-                    left: auto;
-                    right: 0;
-                }
-            }
-        }
-    }
-    &[class*="-vertical"] {
-        display: block;
-        >li {
-            display: block;
-            a {
-                display: block;
-                float: none;
-                &[class*="button"] {
-                    text-align: left;
-                }
-            }
-            >*[class*="menu"]:not([class*="-separated"]) {
-                .position(@t:0, @l:100%);
-            }
-        }
-    }
-    &[class*="-separated"] {
-        >li+li {
-            border-left-width: 1px;
-            border-left-style: solid;
-        }
-    }
-}
-
-// Box
-.box {
-    .border-radius(@cornerRadius);
-    border: 1px solid transparent;
-    display: block;
-    margin-bottom: @margin;
-    padding: @space;
-    &:last-child {
-        margin-bottom: 0;
-    }
-}
-
-// Label
-.label {
-    .border-radius(@cornerRadius);
-    display: inline;
-    padding: (0.2em * @baselineDestroyer) (0.5em * @baselineDestroyer);
-    white-space: nowrap;
-}
-
-// Grid
-.grid.row {
-    margin-left: -@space;
-    margin-top: -@space;
-    *[class^=col] {
-        border-left-width: @space;
-        margin-top: @space;
-    }
-    &[class*="-spacing--xs"] {
-        margin-left: -@space-xs;
-        margin-top: -@space-xs;
-        *[class^=col] {
-            border-left-width: @space-xs;
-            margin-top: @space-xs;
-        }
-    }
-    &[class*="-spacing--s"] {
-        margin-left: -@space-s;
-        margin-top: -@space-s;
-        *[class^=col] {
-            border-left-width: @space-s;
-            margin-top: @space-s;
-        }
-    }
-    &[class*="-spacing--l"] {
-        margin-left: -@space-l;
-        margin-top: -@space-l;
-        *[class^=col] {
-            border-left-width: -@space-l;
-            margin-top: -@space-l;
-        }
-    }
-    &[class*="-spacing--xl"] {
-        margin-left: -@space-xl;
-        margin-top: -@space-xl;
-        *[class^=col] {
-            border-left-width: -@space-xl;
-            margin-top: -@space-xl;
-        }
-    }
-}
-
-// Helpers
-.inline {
-    display: inline-block !important;
-}
-.block {
-    display: block !important;
-}
-.expand {
-    width: 100% !important;
-}
-.width-auto {
-    width: auto !important;
-}
-.clear-fix {
-    .clear-fix;
-}
-
-// Positioning
 .move-left {
     float: left;
 }
@@ -398,81 +39,6 @@ ul[class*="menu"] {
   &, &.cells>.cell {
     vertical-align: top !important;
   }
-}
-
-// Effects
-*[class*="effect"] {
-    &, &[class*="button"] {
-        &.effect-danger {
-            color: @effectDanger !important;
-        }
-        &.effect-warning {
-            color: @effectWarning !important;
-        }
-        &.effect-success {
-            color: @effectSuccess !important;
-        }
-        &.effect-info {
-            color: @effectInfo !important;
-        }
-    }
-    &.label, &.box {
-        &.effect-danger {
-            @color: tint(@effectDanger, 90%);
-            background-color: @color !important;;
-            border-color: @color !important;;
-            &, h1, h2, h3, h4, h5, h6 {
-                color: multiply(@effectDanger, #999) !important;;
-            }
-        }
-        &.effect-warning {
-            @color: tint(@effectWarning, 90%);
-            background-color: @color !important;;
-            border-color: @color !important;;
-            &, h1, h2, h3, h4, h5, h6 {
-                color: multiply(@effectWarning, #999) !important;;
-            }
-        }
-        &.effect-success {
-            @color: tint(@effectSuccess, 90%);
-            background: @color !important;;
-            border-color: @color !important;;
-            &, h1, h2, h3, h4, h5, h6 {
-                color: multiply(@effectSuccess, #999) !important;;
-            }
-        }
-        &.effect-info {
-            @color: tint(@effectInfo, 90%);
-            background-color: @color !important;;
-            border-color: @color !important;;
-            &, h1, h2, h3, h4, h5, h6 {
-                color: multiply(@effectInfo, #999) !important;;
-            }
-        }
-    }
-    &.effect-danger {
-        input[type="text"],
-        input[type="url"],
-        input[type="email"],
-        input[type="password"],
-        input[type="search"],
-        input[type="number"],
-        input[type="date"],
-        input[type="month"],
-        input[type="week"],
-        input[type="time"],
-        input[type="datetime"],
-        input[type="datetime-local"],
-        input[type="tel"],
-        textarea,
-        .ui-selectmenu-button  {
-            border-color: @effectDanger;
-        }
-    }
-}
-.disabled {
-    .opacity(50);
-    pointer-events: none;
 }
 
 
@@ -696,7 +262,7 @@ ul[class*="menu"] {
   }
 }
 [class*="border-bottom"] {
-  border-right-width: 1px;
+  border-bottom-width: 1px;
 }
 [class*="border-left"] {
   border-left-width: 1px;
@@ -711,21 +277,4 @@ ul[class*="menu"] {
   &, &[class*=popover] .popover-arrow:before {
     border-width: 0px !important;
   }
-}
-
-// Item List
-.items:not([class*='items-'])>* + * {
-    margin-left: @space;
-}
-.items-spacing--xs>* + * {
-    margin-left: @space-xs;
-}
-.items-spacing--s>* + * {
-    margin-left: @space-s;
-}
-.items-spacing--l>* + * {
-    margin-left: @space-l;
-}
-.items-spacing--xl>* + * {
-    margin-left: @space-xl;
 }
