--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -2,77 +2,45 @@
 // Forms
 // ==========================================================
 
-@inputPadding: (0.5em * @baselineDestroyer) (0.7em * @baselineDestroyer);
-
-// Basic Fields
-input[readonly],
-div.form-field-readonly {
-    background: @bodyColor;
-}
 fieldset {
     border: none;
     margin: 0;
     padding: 0;
 }
-input[type="text"],
-input[type="url"],
-input[type="email"],
-input[type="password"],
-input[type="search"],
-input[type="number"],
-input[type="date"],
-input[type="month"],
-input[type="week"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="tel"],
-textarea {
-    background: #fff;
-    border: 1px solid @borderClickable;
-    border-radius: @cornerRadius;
-    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.03) inset;
-    color: @bodyColor;
-    line-height: @bodyBaseline;
-    padding: @inputPadding;
+input:not([type=submit]):not([type=button]):not([type=radio]):not([type=checkbox]), textarea {
+    .createElementPadding(@inputPadding, @inputPaddingRatio);
     .placeholder(@inputPlaceholder);
+    background: @inputColor;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: @cornerRadius;
+    box-shadow: @inputInnerShadow;
+    color: @inputText;
+    line-height: @bodyBaseline;
+    &:focus {
+        @shadow: 0 0 @inputFocusGlow fadeout(@inputFocus,30%), 0 0 @inputFocusGlow*2 fadeout(@inputFocus,70%);
+        .box-shadow(@shadow);
+        border-color: @inputFocus !important;
+        outline: none;
+    }
+}
+input[readonly] {
+    background: @inputColor;
 }
 textarea {
-    min-height: @margin * 3 + round(@margin/2,2);
+    min-height: @space-xl;
 }
 input[type=radio],
 input[type=checkbox] {
     line-height: @bodyBaseline;
 }
-input[type=file], select {
-    margin: 0.5em 0 0 0;
-}
 button::-moz-focus-inner,
-input[type="button"]::-moz-focus-inner,
-input[type="submit"]::-moz-focus-inner,
-input[type="reset"]::-moz-focus-inner {
+input::-moz-focus-inner {
     border: 0 !important;
     padding: 0 !important;
 }
-input[type=text]:focus,
-input[type=password]:focus,
-textarea:focus {
-    @shadow: 0 0 @inputFocusGlow fadeout(@inputFocus,30%), 0 0 @inputFocusGlow*2 fadeout(@inputFocus,70%);
-    border-color: @inputFocus !important;
-    .box-shadow(@shadow);
-    outline: none;
-}
-label.input-label {
-    display: inline-block;
-    margin: 0.5em 0;
-    em {
-        font-style: normal;
-        font-weight: normal;
-    }
-}
 
-
-// Advanced Fields
+// Extras
 .input-icon {
     display: inline-block;
     position: relative;
@@ -90,58 +58,13 @@ label.input-label {
         }
     }
 }
-.input-combo.cells {
-    .cell {
-        >* {
-            .border-radius(0);
-            width: 100%;
-        }
-        &:first-child * {
-            .border-left-radius(@cornerRadius);
-            &.button {
-                border-right: none;
-            }
-        }
-        &:last-child * {
-            .border-right-radius(@cornerRadius);
-        }
-        +.cell {
-            .button {
-                border-left: none;
-            }
-        }
-    }
-}
-.input-radio {
-    padding-top: 0.5em;
-    .form-stacked &, &.input-radio-stacked, &[data-layout='stacked'] {
-        padding-top: 0;
-    }
-    span {
-        display: inline-block;
-        margin-right: 1em;
-        // white-space: nowrap;
-        label {
-            margin-left: 0.35em;
-        }
-        input {
-            .position(relative, -0.05em);
-        }
-    }
-    &.input-radio-stacked, &[data-layout='stacked'] {
-        span {
-            display: block;
-            margin-right: 0;
-        }
-    }
-}
 input.option[type=radio] {
     display: none;
     &:checked {
         + label {
             border-color: @inputFocus;
             cursor: default;
-            &, .text-dimmed {
+            &, .comment {
                 color: @inputFocus;
             }
         }
@@ -149,24 +72,4 @@ input.option[type=radio] {
     + label {
         cursor: pointer;
     }
-}
-
-
-// Form Classes
-.form {
-    input[type=text]:not([class*="span"]),
-    input[type=email]:not([class*="span"]),
-    input[type=password]:not([class*="span"]),
-    input[readonly]:not([class*="span"]),
-    textarea:not([class*="span"]),
-    div.form-field-readonly:not([class*="span"]),
-    select,
-    .ui-selectmenu-button,
-    .input-icon {
-        display: block;
-        width: 100%;
-    }
-}
-.form .ui-selectmenu-button {
-    width: 100% !important;
 }
