--- a/framework/less/swatches.less
+++ b/framework/less/swatches.less
@@ -103,11 +103,13 @@
             background-color: @sFill;
             border-color: @sBorder;
         }
-        &[class*="button"],
-        .ui-state-default, .ui-widget-content .ui-state-default {
-            background-color: @sFill;
+        input:not([type=submit]):not([type=button]):not([type=radio]):not([type=checkbox]), textarea,
+        &[class*="button"], .ui-state-default, .ui-widget-content .ui-state-default {
             border-color: @sBorderActive;
+        }
+        &[class*="button"], .ui-state-default, .ui-widget-content .ui-state-default {
             .colorCheck(color, @sFill);
+            background-color: @sFill;
             &:hover {
                 background-color: darken(@sFill,@sHoverIntensity);
                 border-color: darken(@sBorderActive,@sHoverIntensity);
@@ -225,17 +227,92 @@
                 color: @sFill;
             }
         }
-        .swatch-@{sName}-text {
+        .swatch-@{sName}--text {
             color: @sFill;
             a&:hover {
               color: darken(@sFill, @sHoverIntensity*4);
             }
         }
-        .swatch-@{sName}-fill {
+        .swatch-@{sName}--fill {
             background-color: @sFill;
             &, &[class*="popover"] .popover-arrow:before {
               background-color: @sFill;
             }
+        }
+    }
+}
+
+
+// ==========================================================
+// Effects
+// ==========================================================
+
+*[class*="effect"] {
+    &, &[class*="button"] {
+        &.effect-danger {
+            color: @effectDanger !important;
+        }
+        &.effect-warning {
+            color: @effectWarning !important;
+        }
+        &.effect-success {
+            color: @effectSuccess !important;
+        }
+        &.effect-info {
+            color: @effectInfo !important;
+        }
+    }
+    &.label, &.box {
+        &.effect-danger {
+            @color: tint(@effectDanger, 90%);
+            background-color: @color !important;;
+            border-color: @color !important;;
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectDanger, #999) !important;;
+            }
+        }
+        &.effect-warning {
+            @color: tint(@effectWarning, 90%);
+            background-color: @color !important;;
+            border-color: @color !important;;
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectWarning, #999) !important;;
+            }
+        }
+        &.effect-success {
+            @color: tint(@effectSuccess, 90%);
+            background: @color !important;;
+            border-color: @color !important;;
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectSuccess, #999) !important;;
+            }
+        }
+        &.effect-info {
+            @color: tint(@effectInfo, 90%);
+            background-color: @color !important;;
+            border-color: @color !important;;
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectInfo, #999) !important;;
+            }
+        }
+    }
+    &.effect-danger {
+        input[type="text"],
+        input[type="url"],
+        input[type="email"],
+        input[type="password"],
+        input[type="search"],
+        input[type="number"],
+        input[type="date"],
+        input[type="month"],
+        input[type="week"],
+        input[type="time"],
+        input[type="datetime"],
+        input[type="datetime-local"],
+        input[type="tel"],
+        textarea,
+        .ui-selectmenu-button  {
+            border-color: @effectDanger;
         }
     }
 }
