Fix for .ui-icon

--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -334,7 +334,7 @@ a, button, input, .ui-button {
     border-color: transparent !important;
     box-shadow: none !important;
 }
-[class*=button] {
+[class*=button]:not(.ui-icon) {
     .createElementPadding(@buttonPadding, @buttonPaddingRatio);
 }
 
