Renamed swatches.less to colors.less

--- a/framework/less/agiletoolkit.less
+++ b/framework/less/agiletoolkit.less
@@ -20,10 +20,10 @@
 @import 'normalize.less';
 @import 'mixins.less';
 @import 'layouts.less';
-@import 'swatches.less';
+@import 'colors.less';
 @import 'typography.less';
+@import 'components.less';
+@import 'widgets.less';
 @import 'forms.less';
 @import 'misc.less';
-@import 'widgets.less';
-@import 'components.less';
 @import 'variables.less';
