--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -33,11 +33,11 @@ body {
 }
 ::selection {
     background: @textSelect;
-    .colorCheck(@textSelect);
+    .colorCheck(color, @textSelect);
 }
 ::-moz-selection {
     background: @textSelect;
-    .colorCheck(@textSelect);
+    .colorCheck(color, @textSelect);
 }
 img::selection {
     background: transparent;
