--- a/playground/includes/playground-typography.jade
+++ b/playground/includes/playground-typography.jade
@@ -2,76 +2,76 @@ section#typography
   h2 Typography
   p
     | Few 
-    span.atk-label.atk-effect-info
+    span.label.effect-info
       = '<p>'
     |  paragraphs of text.
-  .atk-box
+  .box
     p
       | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel nisl sit amet nisi eleifend auctor. In consectetur leo ante, sed rutrum nulla pretium id. Vivamus porttitor convallis nisl non vulputate. Donec et tellus non ipsum consectetur rutrum in a quam.
     p
       | Praesent ultricies magna et ultrices aliquet. Vivamus posuere sapien erat, at pretium nulla lacinia nec. Etiam eget mollis nisl, non lobortis ante. Nulla erat tortor, faucibus id vehicula in, adipiscing non nulla. Ut pharetra erat hendrerit odio consequat porta. Suspendisse tempus id mi non facilisis.
   p
-    span.atk-label.atk-effect-warning
+    span.label.effect-warning
       span.icon-attention
     |  Preformatted 
-    span.atk-label.atk-effect-info
+    span.label.effect-info
       = '<pre>'
     |  text.
-  .atk-box
+  .box
     pre
       | body {
       |   background:#fff;
       | }
   p
-    span.atk-label.atk-effect-warning
+    span.label.effect-warning
       span.icon-attention
     | 
-    span.atk-label.atk-effect-info
+    span.label.effect-info
       = "<code>"
-  .atk-box
+  .box
     code
       | body {
       | background: #ffffff;
       | }
   p
-    span.atk-label.atk-effect-warning
+    span.label.effect-warning
       span.icon-attention
     |  Use 
-    span.atk-label.atk-effect-info
+    span.label.effect-info
       = "<blockquote>"
     |  to indicate a block of quoted text.
-  .atk-box
+  .box
     blockquote “Nam quis bibendum erat, ut cursus leo.”
-  .atk-row.atk-push
-    .atk-col-8.col
+  .row.push
+    .col-8.col
       h3 Font Scale
       p
         | Font scale classes 
-        span.atk-label.atk-effect-info .atk-size-*
+        span.label.effect-info .size-*
         |  can be assigned to any element. Use 
-        span.atk-label.atk-effect-info .atk-size-reset
+        span.label.effect-info .size-reset
         |  to reset font size to the default body size if necessary.
-      .atk-box
-        .atk-size-yotta .atk-size-yotta
-        .atk-size-zetta .atk-size-zetta
-        .atk-size-exa .atk-size-exa
-        .atk-size-peta .atk-size-peta
-        .atk-size-tera .atk-size-tera
-        .atk-size-giga .atk-size-giga
-        .atk-size-mega .atk-size-mega
-        .atk-size-kilo .atk-size-kilo
-        .atk-size-reset .atk-size-reset
-        .atk-size-milli .atk-size-milli
-        .atk-size-micro .atk-size-micro
-    .atk-col-4.col
+      .box
+        .size-yotta .size-yotta
+        .size-zetta .size-zetta
+        .size-exa .size-exa
+        .size-peta .size-peta
+        .size-tera .size-tera
+        .size-giga .size-giga
+        .size-mega .size-mega
+        .size-kilo .size-kilo
+        .size-reset .size-reset
+        .size-milli .size-milli
+        .size-micro .size-micro
+    .col-4.col
       h3 Headings
       p
         | Headings 
-        span.atk-label.atk-effect-info
+        span.label.effect-info
           = "<h>"
         |  are based on the font scale.
       br
-      .atk-box
+      .box
         h1 Heading h1
         h2 Heading h2
         h3 Heading h3
@@ -79,6 +79,6 @@ section#typography
         h5 Heading h5
         h6 Heading h6
   h3 Undocumented classes
-  p .atk-text-lead, .atk-text-bold, .atk-text-normal, .atk-text-dimmed, .atk-text-nowrap, .atk-text-reset, .atk-text-baseline-reset, .atk-text-ellipsis
+  p .text-lead, .text-bold, .text-normal, .text-dimmed, .text-nowrap, .text-reset, .text-baseline-reset, .text-ellipsis
   h4 Classes for HR
-  p .atk-hr-small, .atk-hr-large, .atk-hr-dotted, .atk-hr-reset
+  p .hr-small, .hr-large, .hr-dotted, .hr-reset
