--- a/playground/index.jade
+++ b/playground/index.jade
@@ -8,12 +8,12 @@ html
   include includes/head
   body
     include includes/browsehappy
-    .atk-layout
+    .layout
       include includes/header
-      .atk-layout-row.atk-layout-expand
-        .atk-layout.atk-layout-cell#atk-layout-content
-          .atk-layout-column.atk-layout-expand
-            .atk-wrapper.atk-section-large
+      .layout-row.layout-expand
+        .layout.layout-cell#layout-content
+          .layout-column.layout-expand
+            .wrapper.section-large
               include includes/playground-gridsystem
               include includes/playground-typography
               include includes/playground-helpers
